--- a/remove_data.html
+++ b/remove_data.html
@@ -1,22 +1,9 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Delete Account Data</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-        }
-    </style>
-</head>
-<body>
-    <h1>Delete Your Account Data</h1>
-    <p>If you wish to delete all data associated with your account, please follow the procedure below:</p>
-    <ol>
-        <li>Ensure you are certain about this decision as it is irreversible.</li>
-        <li>Send an email to <a href="mailto:jb.moufle.dev@gmail.com">jb.moufle.dev@gmail.com</a> with the subject line "Request to Delete Account Data".</li>
-        <li>In the body of the email, include your account username and email address for verification purposes.</li>
-        <li>Wait for a confirmation email from us. We will process your request as soon as possible.</li>
-    </ol>
-    <p>Once your data has been deleted, you will not be able to recover it. Please ensure you have saved any important information elsewhere before proceeding.</p>
-</body>
-</html>
+Delete Account Data
+
+If you wish to delete all data associated with your account, please follow the procedure below:
+- Ensure you are certain about this decision as it is irreversible.
+- Send an email to jb.moufle.dev@gmail.com with the subject line "Request to Delete Account Data".
+- In the body of the email, include your account username and email address for verification purposes.
+- Wait for a confirmation email from us. We will process your request as soon as possible.
+
+Once your data has been deleted, you will not be able to recover it. Please ensure you have saved any important information elsewhere before proceeding.
